# lucidly

./: .gitignore  README.md  package.json  render.yaml  test-interview-flow.js
backend/: .env.example  VISION_COMPARISON.md  agent_runner.py  agent_turn.py  agents.py  auth.py  challenges.json  challenges.py  config.py  database.py  evaluator.py  llm.py  main.py  modal_execution.py  pyproject.toml  requirements.txt  sandbox.py  schema.sql  scoring.py  scoring_sessions.py  screenshot_capture.py  session_events.py  sessions.py  stagehand_scrape.py  test_element_screenshot.py  test_generator.py  test_pipeline.py  test_pipeline_quick.py  test_screenshot_capture.py  test_vision_comparison.py  vision_comparison.py
backend/challenge_code/: ai-landing.html  openai-landing.html  snake-game.html
backend/evaluation/: __init__.py  evaluator.py  scoring.py  screenshot_capture.py  screenshot_vision_integration.py  test_generator.py  test_pipeline.py  test_pipeline_quick.py  test_reference_screenshot.py  test_scoring.py  test_vision_comparison.py  vision_comparison.py
backend/integrations/: generate.py  github.py  github_runner.py  linear.py  router.py  store.py
backend/interviews/: __init__.py  models.py  realtime.py  router.py  store.py
backend/migrations/: 001_leaderboard_rpcs.sql  002_backfill_usernames.sql  002_challenge_attempts.sql  add_user_integrations.sql
backend/scripts/: debug_discovery.py  test_e2e_import.py
backend/tests/: conftest.py  test_auth.py  test_challenges_model.py  test_daily_attempts.py  test_evaluator_repo_context.py  test_function_extraction.py  (+10 more)
(+58 files in other folders)
