[project]
name = "lucidly-backend"
version = "0.1.0"
description = "Lucidly backend - competitive AI prompting platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "openai",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "httpx",
    "websockets",
    "modal>=1.3.3",
    "playwright>=1.40.0",
    "supabase>=2.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
